--- a/client/src/App.css
+++ b/client/src/App.css
@@ -36,3 +36,105 @@
     transform: rotate(360deg);
   }
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
+:root {
+  --primary-white: #fff;
+  --primary-orange: #f9ab00;
+  --primary-dark: rgba(255,255,255, 0);
+  --primary-red: #ef4035;
+  --primary-hover-red: #f33501;
+}
+
+body {
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+/****************************** NAVBAR **********************************/
+.logo {
+  width: 16.25rem;
+}
+
+
+
+/*------------- MENU LINKS ---------------*/
+nav a.nav-link {
+  font-weight: 500;
+  letter-spacing: 0.0375rem;
+  cursor: pointer;
+}
+
+nav ul li {
+  text-transform: uppercase;
+}
+
+.navbar-nav > li > a {
+  margin-right: 0.75rem;
+  margin-left: 0.75rem;
+  color: var(--primary-white) !important;
+  border-top: 0.1875rem;
+}
+
+.navbar-brand {
+  max-width: 17.25rem;
+  padding: 30px !important;
+  height: 6rem !important;
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus {
+  border-top: 0.1875rem solid var(--primary-orange);
+}
+
+.navbar-nav > li > a:hover {
+  border-top: 0.1875rem solid var(--primary-orange);
+}
+
+/****************************** HEADER **********************************/
+
+.header-wraper {
+  position: relative;
+  background: url(./images/background.PNG) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condensed", sans-serif;
+}
+
+.main-info h1 {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+}
+
+/****************************** TYPED TEXT **********************************/
+
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+.btn-main-offer {
+  border: 1px solid var(--primary-red);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 10px 12px 12px 12px;
+}
+
+/****************************** HEADER MAIN OFFER BUTTON **********************************/
+
+.btn-main-offer {
+  border: 1px solid var(--primary-red)
+}
+
+/****************************** HAMBURGER MENU **********************************/
+.h-menu {
+  color: var(--primary-white) !important;
+}
